src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Featured Electronics</fullName>
                </value>
                <value>
                    <fullName>Smart Home</fullName>
                </value>
                <value>
                    <fullName>TV, Audio &amp; Home Theater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Laptops</fullName>
                </value>
                <value>
                    <fullName>Desktops</fullName>
                </value>
                <value>
                    <fullName>Monitors</fullName>
                </value>
                <value>
                    <fullName>TVs</fullName>
                </value>
                <value>
                    <fullName>Projectors</fullName>
                </value>
                <value>
                    <fullName>Printers</fullName>
                </value>
                <value>
                    <fullName>Headphones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X11</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Price__c</columns>
        <columns>Family__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>1</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>